# bar-protonmail

./: .gitignore  LICENSE  README.md  bar_protonmail.py  justfile  output.py  protonmail_api.py  pyproject.toml  save_auth.py  setup.cfg
bar_protonmail/: __init__.py  app.py  auth.py  bar.py  output.py  protonmail.py
