[metadata]
name = bar-protonmail
version = 1.0.0
author = Vyacheslav Konovalov
author_email = crabvk@protonmail.com
description = Waybar/Polybar module for notifications and unread messages count from ProtonMail
long_description = file: README.md
long_description_content_type = text/markdown
keywords = waybar polybar protonmail
license = MIT
license_files = LICENSE
platform = Unix
url = https://github.com/crabvk/bar-protonmail
project_urls =
    Source = https://github.com/crabvk/bar-protonmail
    Tracker = https://github.com/crabvk/bar-protonmail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
install_requires =
    proton-client >= 0.7.1
    dnspython >= 2.1.0

[options.packages.find]
exclude = tests

[options.package_data]
bar-protonmail = icon.svg

[options.entry_points]
console_scripts =
    bar-protonmail = bar_protonmail:cli
